2009-10-30  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Darin Adler.

        counterValueForElementById should return space-separated string for multiple counters
        https://bugs.webkit.org/show_bug.cgi?id=30939

        * fast/css/counters/counterValueForElementById-expected.txt: Added.
        * fast/css/counters/counterValueForElementById.html: Added.

2009-10-30  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Mark Rowe.

        fast/css/counters/t1204* are not asynchronous anymore
        https://bugs.webkit.org/show_bug.cgi?id=30940

        * fast/css/counters/t1204-increment-00-c-o.html:
        * fast/css/counters/t1204-increment-01-c-o.html:

2009-10-30  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Unreviewed layout test fixes.

        The existing excepted results were wrong, due to the visited links not
        being reset between tests.

        This was fixed in r50329, so updating the results.

        * platform/qt/fast/block/margin-collapse/block-inside-inline/010-expected.txt:
        * platform/qt/fast/block/margin-collapse/block-inside-inline/011-expected.txt:
        * platform/qt/fast/block/margin-collapse/block-inside-inline/012-expected.txt:
        * platform/qt/fast/block/margin-collapse/block-inside-inline/015-expected.txt:
        * platform/qt/fast/block/margin-collapse/block-inside-inline/016-expected.txt:
        * platform/qt/fast/block/margin-collapse/block-inside-inline/020-expected.txt:

2009-10-30  Andras Becsi  <becsi.andras@stud.u-szeged.hu>

        Reviewed by Holger Hans Peter Freyther.

        [Qt] Add expected files for new svg tests we pass.
        Compared to the Mac expected png files.

        * platform/qt/svg/css/arrow-with-shadow-expected.txt: Added.
        * platform/qt/svg/css/circle-in-mask-with-shadow-expected.txt: Added.
        * platform/qt/svg/css/clippath-with-shadow-expected.txt: Added.